# apix-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  release.yml  rust.yml
examples/: github-create-release.yaml  github-upload-release-asset.yaml  postman-echo-delete.yaml  postman-echo-get.yaml  postman-echo-patch.yaml  postman-echo-post-file.yaml  postman-echo-post.yaml  postman-echo-put.yaml  postman-echo-stream.yaml  request.yaml  request_html.yaml  request_with_advanced_template.yaml  request_with_env.yaml  request_with_file.yaml  request_with_params.yaml  request_with_query_params.yaml  request_yaml.yaml
src/: build_args.rs  cli_params.rs  cli_validators.rs  config.rs  dialog.rs  display.rs  editor.rs  execute.rs  http_display.rs  http_utils.rs  import.rs  main.rs  match_params.rs  match_prompts.rs  progress_component.rs  requests.rs  template.rs  validators.rs
src/manifests/: config.rs  mod.rs
