[package]
name = "apix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.8", features=["regex", "cargo"] }
clap_generate = "3.0.0-rc.8"
regex = "1.5.4"
url = "2.2.2"
lazy_static = "1.4.0"
strum = "0.23.0"
strum_macros = "0.23.1"
serde_json = { version = "1.0.73", features=["preserve_order"] }
serde_yaml = "0.8.23"
reqwest = { version="0.11.8", features = ["gzip"] }
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.52"
serde = "1.0.132"
indexmap = { version = "1.7.0", features=["serde"]}
async-trait = "0.1.52"
bat = "0.18.3"
dirs = "4.0.0"
whoami = "1.2.1"
chrono = "0.4.19"
json_schema = "1.6.19"
tera = "1.15.0"

[dev-dependencies]
test-case = "1.2.1"
